# opensim-nrp

./: .gitignore  CMakeLists.txt  README.md  package.xml
OpenSim3.3/: CMakeLists.txt
OpenSim3.3/Applications/: CMakeLists.txt
OpenSim3.3/Applications/Analyze/test/: externalForces.xml  subject01_Setup_StaticOptimization.xml  testStaticOptimization.cpp
OpenSim3.3/Applications/CMC/test/: std_runningModel_CMC_states.sto  testCMC.cpp
OpenSim3.3/Applications/ID/: CMakeLists.txt
OpenSim3.3/Applications/Scale/test/: testScale.cpp
OpenSim3.3/OpenSim/: CMakeLists.txt  OpenSimDoxygenMain.h
OpenSim3.3/OpenSim/Actuators/: ClutchedPathSpring.cpp  Millard2012AccelerationMuscle.cpp
OpenSim3.3/OpenSim/Analyses/: CMakeLists.txt  StaticOptimization.cpp  StaticOptimization.h  StaticOptimizationTarget.cpp
OpenSim3.3/OpenSim/Common/: Exception.h  Object.cpp  Property.cpp
OpenSim3.3/OpenSim/Examples/: CMakeLists.txt
OpenSim3.3/OpenSim/Examples/OptimizationExample_Arm26/: OptimizationExample.cpp
OpenSim3.3/OpenSim/Simulation/: RegisterTypes_osimSimulation.cpp  osimSimulation.h
OpenSim3.3/OpenSim/Simulation/Manager/: Manager.cpp
OpenSim3.3/OpenSim/Simulation/Model/: ActivationFiberLengthMuscle.cpp  ActivationFiberLengthMuscle_Deprecated.cpp  Bhargava2004MuscleMetabolicsProbe.cpp  Bhargava2004MuscleMetabolicsProbe.h  ContactMesh.cpp  ConveyorBeltForce.cpp  ConveyorBeltForce.h  Force.h  FunctionBasedBushingForce.cpp  FunctionBasedBushingForce.h  GeometryPath.cpp  Model.cpp  Model.h  Umberger2010MuscleMetabolicsProbe.cpp
OpenSim3.3/OpenSim/Simulation/SimbodyEngine/: Coordinate.h  SliderJoint.cpp  SliderJoint.h
OpenSim3.3/OpenSim/Simulation/Test/: testMuscleMetabolicsProbes.cpp
OpenSim3.3/OpenSim/Simulation/Wrap/: WrapDoubleCylinderObst.cpp
OpenSim3.3/OpenSim/Tests/: CMakeLists.txt
OpenSim3.3/OpenSim/Tests/CoupledBushingForceExample/: CMakeLists.txt
OpenSim3.3/OpenSim/Tests/OptimizationExample_Arm26/: testOptimizationExample.cpp
OpenSim3.3/OpenSim/Tools/: InverseDynamicsTool.cpp  InverseDynamicsTool.h
OpenSim3.3/OpenSim/Wrapping/: CMakeLists.txt
OpenSim3.3/OpenSim/Wrapping/Python/: CMakeLists.txt  setup.py
OpenSim3.3/OpenSim/doc/: CMakeLists.txt  Doxyfile.in
OpenSim3.3/Vendors/: CMakeLists.txt
OpenSim3.3/Vendors/lepton/: CMakeLists.txt
gazebo/: CMakeLists.txt
gazebo/include/: conveyor_belt_plugin.h  side_contact_plugin.h
gazebo/sdf/conveyor_belt/: model.sdf
gazebo/sdf/mouse_leg/: model.sdf  model.urdf
gazebo/sdf/mouse_leg/collisions/: COL_obj_forearm.L_convex_hull.dae  COL_obj_forearm.R_convex_hull.dae  COL_obj_head_convex_hull.dae  COL_obj_hips.005_convex_hull.dae  COL_obj_hips.007_convex_hull.dae  COL_obj_hips.009_convex_hull.dae  COL_obj_hips.010_convex_hull.dae  COL_obj_hips.013_convex_hull.dae  COL_obj_hips.014_convex_hull.dae  COL_obj_hips.016_convex_hull.dae  COL_obj_hips.018_convex_hull.dae  COL_obj_mouth_convex_hull.dae  COL_obj_neck_convex_hull.dae  COL_obj_shin.R_convex_hull.dae  COL_obj_shin_lower.L_convex_hull.dae  COL_obj_shin_lower.R_convex_hull.dae  COL_obj_shoulder.L_convex_hull.dae  COL_obj_spine.001_convex_hull.dae  (+2 more)
gazebo/src/: conveyor_belt_plugin.cpp  side_contact_plugin.cpp
gazebo/worlds/: hindleg_experiment.world
models/RatHindLeg/: rat_hindlimb_no_muscles.osim
opensim/: CMakeLists.txt  OpenSimSimulation.cpp  OpenSimSimulation.h  SimulationLogger.cpp  SimulationLogger.h  main.cpp
opensim/cmake/: FindOpenSim.cmake  FindSimbody.cmake
opensim/models/RatHindLeg/: rat_hindlimb_no_muscles.osim  rat_hindlimb_no_muscles_NoGravityOrCollision.osim  rat_hindlimb_no_muscles_meshCollision_elasticFoundationForce.osim  rat_hindlimb_twoBones.osim  rat_hindlimb_twoBones_conveyorForceField.osim  rat_hindlimb_twoBones_conveyorForceField_x0.osim  rat_hindlimb_twoBones_conveyorForceField_x1.osim  rat_hindlimb_twoBones_conveyorForceField_x100.osim  rat_hindlimb_twoBones_conveyorForceField_x10000.osim  rat_hindlimb_twoBones_noDecorativeGeometries.osim
opensim/models/RatHindLeg/RatModel/: Rat202.mot  Rat208.mot  rat_hindlimb_0.2.osim
opensim/models/RatHindLeg/RatModel/Geometry/: femur.vtp  femur_l.vtp  ground.vtp  mouseFoot.mtl  mouseFoot_collision.mtl  pelvis_l.vtp  tibia.vtp
sdf/mouse_leg/: model.config  model.sdf  mousev2_ext_controller.sh
sdf/mouse_leg/collisions/: COL_obj_chest_convex_hull.dae  COL_obj_hips.002_convex_hull.dae  COL_obj_hips.003_convex_hull.dae  COL_obj_hips.004_convex_hull.dae  COL_obj_hips.006_convex_hull.dae  COL_obj_hips.008_convex_hull.dae  COL_obj_hips.011_convex_hull.dae  COL_obj_hips.012_convex_hull.dae  COL_obj_hips.015_convex_hull.dae  COL_obj_hips.017_convex_hull.dae  COL_obj_hips.019_convex_hull.dae  COL_obj_hips.020_convex_hull.dae  COL_obj_hips.021_convex_hull.dae  COL_obj_hips_convex_hull.dae  COL_obj_neck.001_convex_hull.dae  COL_obj_neck.002_convex_hull.dae  COL_obj_nose_convex_hull.dae  COL_obj_shin.L_convex_hull.dae  COL_obj_shoulder.R_convex_hull.dae  COL_obj_thigh.R_convex_hull.dae  COL_obj_upper_arm.L_convex_hull.dae  COL_obj_upper_arm.R_convex_hull.dae  COL_obj_wrist.L_convex_hull.dae  COL_obj_wrist.R_convex_hull.dae
sdf/mouse_leg/docker/: Dockerfile  README.txt  external_controller.sh  transformData.py
sdf/mouse_leg/meshes/: obj_chest.dae  obj_head.dae  obj_hips.004.dae  obj_hips.005.dae  obj_hips.008.dae  obj_hips.009.dae  obj_hips.010.dae  obj_hips.011.dae  obj_hips.014.dae  obj_hips.015.dae  obj_hips.021.dae  obj_hips.dae  obj_mouth.dae  obj_shin.L.dae  obj_shin_lower.L.dae  obj_shoulder.R.dae  obj_spine.001.dae  obj_thigh.L.dae  obj_thigh.R.dae  obj_upper_arm.L.dae
simulationAnalyser/: simDataVisualizer.py
src/: side_contact_plugin.cpp
test-programs2/: BUILDING.txt  CMakeLists.txt  MobilityDiscreteForce.cpp  MobilityDiscreteForce.h  bouncing_sphere_model.cpp  driven_spinning_sphere.cpp  dynamic_topology.cpp  spinning_sphere_model.cpp  tug_of_war_modified.cpp  tug_of_war_muscle_definition.osim  tug_of_war_muscle_definition1.osim  tug_of_war_muscle_definition2.osim  tug_of_war_osim_load.cpp
test-programs2/cmake/: FindOpenSim.cmake  FindSimbody.cmake
(+56 files in other folders)
